Refactored BudgetManager class